Update WorldCat url generation
Signed-off-by: Jason Winning <jason.winning@gmail.com>